[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/mentalMap.gd" type="Script" id=2]

[node name="mentalMap" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menu" type="HBoxContainer" parent="."]
anchor_right = 1.0
margin_bottom = 25.0

[node name="new" type="Button" parent="menu"]
margin_right = 113.0
margin_bottom = 25.0
text = "Nuevo proyecto"

[node name="load" type="Button" parent="menu"]
margin_left = 117.0
margin_right = 168.0
margin_bottom = 25.0
text = "Cargar"

[node name="save" type="Button" parent="menu"]
margin_left = 172.0
margin_right = 234.0
margin_bottom = 25.0
text = "Guardar"

[node name="save as" type="Button" parent="menu"]
margin_left = 238.0
margin_right = 340.0
margin_bottom = 25.0
text = "Guardar como"

[node name="Button" type="Button" parent="menu"]
margin_left = 344.0
margin_right = 441.0
margin_bottom = 25.0
text = "Eliminar todo"

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 25.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GraphEdit" type="GraphEdit" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 568.0
use_snap = false

[node name="new_task" type="WindowDialog" parent="."]
margin_left = 345.0
margin_top = 234.0
margin_right = 645.0
margin_bottom = 314.0
window_title = "Nueva tarea"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="new_task"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 5.0
margin_right = -10.0
margin_bottom = -5.0
size_flags_horizontal = 7
size_flags_vertical = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit" type="TextEdit" parent="new_task/VBoxContainer"]
margin_right = 280.0
margin_bottom = 46.0
size_flags_horizontal = 7
size_flags_vertical = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Accept" type="Button" parent="new_task/VBoxContainer"]
margin_top = 50.0
margin_right = 280.0
margin_bottom = 70.0
text = "Aceptar"

[connection signal="pressed" from="menu/new" to="." method="_on_new_pressed"]
[connection signal="pressed" from="menu/load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="menu/save" to="." method="_on_save_pressed"]
[connection signal="connection_from_empty" from="PanelContainer/GraphEdit" to="." method="_on_GraphEdit_connection_from_empty"]
[connection signal="connection_request" from="PanelContainer/GraphEdit" to="." method="_on_GraphEdit_connection_request"]
[connection signal="connection_to_empty" from="PanelContainer/GraphEdit" to="." method="_on_GraphEdit_connection_to_empty"]
[connection signal="node_selected" from="PanelContainer/GraphEdit" to="." method="_on_GraphEdit_node_selected"]
[connection signal="pressed" from="new_task/VBoxContainer/Accept" to="." method="_on_Accept_pressed"]
